tests/fails/forlist.t
if not require("fail") then return end


terra foo()
    for i in 3 do
    end
end

foo()
